--- a/index.html
+++ b/index.html
@@ -142,17 +142,7 @@
         </ul>
     </section>
 
-    <section>
-        <h2>Project 2: Project Name</h2>
-        <p>Description of the project goes here. Provide a brief overview of what the project is about.</p>
-        <ul>
-            <li>Language: Python</li>
-            <li>Framework: Flask</li>
-            <li><a href="#">GitHub Repository</a></li>
-        </ul>
-    </section>
-
-    <!-- Add more sections for additional projects -->
+    <!-- Put Projects here -->
 
     <section id="contact">
         <h2>Contact Me</h2>
