--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <nav>
         <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="https://ThatOtherGuyAbout.github.io" target="_blank">About Me</a>
     </nav>
 
     <section id="projects">
