--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </header>
 
     <nav>
-        <a href="#projects">Projects</a>
+        <a href="https://thatother-guy.github.io" target="_blank">Projects</a>
         <a href="https://ThatOtherGuyAbout.github.io" target="_blank">About Me</a>
     </nav>
 
