--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
     </nav>
 
     <section id="projects">
-        <h2>Project 1: Project Name</h2>
-        <p>Description of the project goes here. Provide a brief overview of what the project is about.</p>
+        <h2>Project 1: Placeholder</h2>
+        <p>Description of project.</p>
         <ul>
-            <li>Language: HTML, CSS, JavaScript</li>
-            <li>Framework: Bootstrap</li>
+            <li>Language: </li>
+        </ul>
+        <ul>
             <li><a href="#">GitHub Repository</a></li>
         </ul>
     </section>
