--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <nav>
         <a href="https://thatother-guy.github.io" target="_blank">Projects</a>
-        <a href="https://ThatOtherGuyAbout.github.io" target="_blank">About Me</a>
+        <a href="https://ThatOther-Guy.github.io/about.html" target="_blank">About Me</a>
     </nav>
 
     <section id="projects">
