--- a/about.html
+++ b/about.html
@@ -81,8 +81,8 @@
         <h1>About Me</h1>
     </header>
     <nav>
-        <a href="https://thatother-guy.github.io" target="_blank">Projects</a>
-        <a href="https://ThatOther-Guy.github.io/about.html" target="_blank">About Me</a>
+        <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
+        <a href="https://JonathanBHolden.github.io/about.html" target="_blank">About Me</a>
     </nav>
 
     <section>
