--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
 
     <header>
-        <h1>Your Coding Projects</h1>
+        <h1>Jonathan Holden</h1>
         <p>Explore my coding journey and projects</p>
     </header>
 
