--- a/index.html
+++ b/index.html
@@ -133,13 +133,12 @@
     </nav>
 
     <section id="projects">
-        <h2>Project 1: Placeholder</h2>
-        <p>Description of project.</p>
+        <h2>Khan Academy</h2>
         <ul>
-            <li>Language: </li>
+            <li>Language: HTML </li>
         </ul>
         <ul>
-            <li><a href="#">GitHub Repository</a></li>
+            <li><a href="#">Projects</a></li>
         </ul>
     </section>
 
