--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <li>Language: HTML </li>
         </ul>
         <ul>
-            <li><a href="#">Projects</a></li>
+            <li><a href="https://JonathanBHolden.github.io/KhanAcademy.html">Projects</a></li>
         </ul>
     </section>
 
