--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -125,7 +125,7 @@
     </script>
 
     <header>
-        <h1>Your Website Title</h1>
+        <h1>Unit 2 Excersises</h1>
     </header>
     <nav>
         <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
@@ -133,9 +133,6 @@
     </nav>
 
     <section>
-        <h2>Welcome to My Website!</h2>
-        <p>This is a sample section. You can replace this with your actual content.</p>
-
         <!-- Dropdown menu -->
         <div class="dropdown">
             <button>Unit 2</button>
@@ -148,7 +145,6 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
     </footer>
 
 </body>
