--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -135,11 +135,11 @@
     <section>
         <!-- Dropdown menu -->
         <div class="dropdown">
-            <button>Unit 2</button>
+            <button>Intro To CSS</button>
             <div class="dropdown-content">
-                <a href="#">Option 1</a>
-                <a href="#">Option 2</a>
-                <a href="#">Option 3</a>
+                <a href="#">Colorful Creature</a>
+                <a href="#">Seasonal ID's</a>
+                <a href="#">Apples and bananas classes</a>
             </div>
         </div>
     </section>
