--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -137,7 +137,7 @@
         <div class="dropdown">
             <button>Intro To CSS</button>
             <div class="dropdown-content">
-                <a href="#">Colorful Creature</a>
+                <a href="https://JonathanBHolden.github.io/ColorfulCreature.html">Colorful Creature</a>
                 <a href="#">Seasonal ID's</a>
                 <a href="#">Apples and bananas classes</a>
             </div>
