--- a/ColorfulCreature.html
+++ b/ColorfulCreature.html
@@ -78,7 +78,7 @@
 <body>
 
     <header>
-        <h1>Titile</h1>
+        <h1>Colorful creature</h1>
     </header>
     <nav>
         <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
