--- a/SeasonalID.html
+++ b/SeasonalID.html
@@ -87,9 +87,40 @@
 
     <section>
         <pre>
-            <code>
-                
-            </code>
+            &lt;!DOCTYPE html&gt;
+            &lt;html&gt;
+                &lt;head&gt;
+                    &lt;meta charset="utf-8"&gt;
+                    &lt;title&gt;Challenge: Seasonal ids&lt;/title&gt;
+                    &lt;style&gt;
+                        h1 {
+                            text-align: center;
+                            color: #009688;
+                        }
+
+                        #summer {
+                            color: #ff9800; /* Orange color for Summer heading */
+                        }
+
+                        #winter {
+                         color: #2196f3; /* Blue color for Winter heading */
+                        }
+
+                      p {
+                         line-height: 1.6;
+                        }
+                    &lt;/style&gt;
+               &lt;/head&gt;
+                &lt;body&gt;
+                    &lt;h1&gt;Olaf's favorite seasons&lt;/h1&gt;
+
+                    &lt;h2 id="summer"&gt;Summer&lt;/h2&gt;
+                    &lt;p&gt;He's a happy snowman, doing what frozen things do in summer.&lt;/p&gt;
+
+                    &lt;h2 id="winter"&gt;Winter&lt;/h2&gt;
+                    &lt;p&gt;He likes to stay in and cuddle&lt;/p&gt;
+              &lt;/body&gt;
+          &lt;/html&gt;
         </pre>
     </section>
 
