--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title></title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -114,7 +114,6 @@
 
 <body>
     <script>
-        // JavaScript to toggle dropdown content
         document.addEventListener('DOMContentLoaded', function () {
             var dropdown = document.querySelector('.dropdown');
             dropdown.addEventListener('click', function () {
