--- a/SeasonalID.html
+++ b/SeasonalID.html
@@ -78,7 +78,7 @@
 <body>
 
     <header>
-        <h1>Titile</h1>
+        <h1>Seasonal ID's</h1>
     </header>
     <nav>
         <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
