--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -138,7 +138,7 @@
             <div class="dropdown-content">
                 <a href="https://JonathanBHolden.github.io/ColorfulCreature.html">Colorful Creature</a>
                 <a href="https://JonathanBHolden.github.io/SeasonalID.html">Seasonal ID's</a>
-                <a href="#">Apples and bananas classes</a>
+                <a href="https://JonathanBHolden.github.io/ApplesBananas.html">Apples and bananas classes</a>
             </div>
         </div>
     </section>
