--- a/ApplesBananas.html
+++ b/ApplesBananas.html
@@ -78,7 +78,7 @@
 <body>
 
     <header>
-        <h1>Titile</h1>
+        <h1>Apples And Bananas Classes</h1>
     </header>
     <nav>
         <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
@@ -87,10 +87,70 @@
 
     <section>
         <pre>
-            <code>
-                
-            </code>
-        </pre>
+    &lt;!DOCTYPE html&gt;
+    &lt;html&gt;
+        &lt;head&gt;
+            &lt;meta charset="utf-8"&gt;
+            &lt;title&gt;Challenge: Apples and bananas classes&lt;/title&gt;
+            &lt;style&gt;
+                .apples {
+                    color: red; /* Set color for 'apples' class */
+                }
+
+                .bananas {
+                    color: yellow; /* Set color for 'bananas' class */
+                }
+            &lt;/style&gt;
+        &lt;/head&gt;
+        &lt;body&gt;
+
+        &lt;h1&gt;&lt;strong class="apples"&gt;Apples&lt;/strong&gt; and &lt;strong class="bananas"&gt;Bananas&lt;/strong&gt;&lt;/h1&gt;
+        
+        &lt;p&gt;
+        I like to eat eat eat 
+            &lt;strong class="apples"&gt;apples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bananas&lt;/strong&gt;.&lt;br&gt;
+        I like to eat eat eat 
+            &lt;strong class="apples"&gt;apples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bananas&lt;/strong&gt;.&lt;br&gt;
+        I like to ate ate ate 
+            &lt;strong class="apples"&gt;ay-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bay-nay-nays&lt;/strong&gt;.&lt;br&gt;
+        I like to ate ate ate 
+            &lt;strong class="apples"&gt;ay-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bay-nay-nays&lt;/strong&gt;.&lt;br&gt;
+        I like to eet eet eet
+            &lt;strong class="apples"&gt;ee-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bee-nee-nees&lt;/strong&gt;.&lt;br&gt;
+        I like to eet eet eet
+            &lt;strong class="apples"&gt;ee-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bee-nee-nees&lt;/strong&gt;.&lt;br&gt;
+        I like to ite ite ite
+            &lt;strong class="apples"&gt;i-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;by-by-nys&lt;/strong&gt;.&lt;br&gt;
+        I like to ite ite ite
+            &lt;strong class="apples"&gt;i-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;by-by-nys&lt;/strong&gt;.&lt;br&gt;
+        I like to ote ote ote
+            &lt;strong class="apples"&gt;oh-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bo-no-nos&lt;/strong&gt;.&lt;br&gt;
+        I like to ote ote ote
+            &lt;strong class="apples"&gt;oh-ples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bo-no-nos&lt;/strong&gt;.&lt;br&gt;
+        I like to ute ute ute
+            &lt;strong class="apples"&gt;uupples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bununus&lt;/strong&gt;.&lt;br&gt;
+        I like to ute ute ute
+            &lt;strong class="apples"&gt;uupples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bununus&lt;/strong&gt;.&lt;br&gt;
+        I like to eat eat eat 
+            &lt;strong class="apples"&gt;apples&lt;/strong&gt; and
+            &lt;strong class="bananas"&gt;bananas&lt;/strong&gt;.&lt;br&gt;
+        &lt;/p&gt;
+
+        &lt;/body&gt;
+    &lt;/html&gt;
+</pre>
     </section>
 
     <footer>
