--- a/TravelWebpage.html
+++ b/TravelWebpage.html
@@ -1,1 +1,185 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 2em 0;
+        }
+        nav {
+            background-color: #007BFF;
+            color: #fff;
+            text-align: center;
+            padding: 0.5em 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 1em;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+        
+
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 1em;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: #33333;
+        }
+
+        p {
+            line-height: 1.6;
+            color: #555;
+        }
+
+        .profile-image {
+            display: block;
+            margin: 1em auto;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+
+    <header>
+        <h1>Travel Webpage Prokect</h1>
+    </header>
+    <nav>
+        <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
+        <a href="https://JonathanBHolden.github.io/about.html" target="_blank">About Me</a>
+    </nav>
+
+    <section>
+        <pre>
+    &lt;!DOCTYPE html&gt;
+    &lt;html lang="en"&gt;
+    &lt;head&gt;
+        &lt;meta charset="UTF-8"&gt;
+        &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+        &lt;title&gt;Exotic Travel Destination&lt;/title&gt;
+        &lt;style&gt;
+            body {
+                font-family: 'Arial', sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: #f5f5f5;
+                color: #333;
+            }
+
+            header {
+                background-color: #007BFF;
+                color: #fff;
+                text-align: center;
+                padding: 2em 0;
+            }
+
+            h1 {
+                color: #333;
+            }
+
+            section {
+                max-width: 800px;
+                margin: 2em auto;
+                padding: 1em;
+                background-color: #fff;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+
+            img {
+                max-width: 100%;
+                height: auto;
+                border-radius: 8px;
+                margin-bottom: 1em;
+            }
+
+            ul {
+                list-style-type: disc;
+                margin-left: 20px;
+                color: #555;
+            }
+
+            p {
+                line-height: 1.6;
+                color: #555;
+            }
+
+            footer {
+                background-color: #333;
+                color: #fff;
+                text-align: center;
+                padding: 1em 0;
+            }
+        &lt;/style&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+
+        &lt;header&gt;
+            &lt;h1&gt;Explore the Exotic&lt;/h1&gt;
+        &lt;/header&gt;
+
+        &lt;section&gt;
+            &lt;img src="exotic_destination.jpg" alt="Exotic Destination"&gt;
+            &lt;h2&gt;Discover Paradise&lt;/h2&gt;
+            &lt;p&gt;Escape to a tropical paradise where sun-kissed beaches meet lush green landscapes. Immerse yourself in the vibrant culture and rich history of this exotic destination.&lt;/p&gt;
+
+            &lt;h2&gt;Things to See and Do&lt;/h2&gt;
+            &lt;ul&gt;
+                &lt;li&gt;Relax on pristine beaches with crystal-clear waters.&lt;/li&gt;
+                &lt;li&gt;Explore ancient ruins and historical landmarks.&lt;/li&gt;
+                &lt;li&gt;Indulge in local cuisine at seaside restaurants.&lt;/li&gt;
+                &lt;li&gt;Embark on thrilling adventures like snorkeling and hiking.&lt;/li&gt;
+            &lt;/ul&gt;
+
+            &lt;h2&gt;Plan Your Trip&lt;/h2&gt;
+            &lt;p&gt;Plan your dream vacation to this exotic locale. Whether you seek relaxation or adventure, this destination offers a perfect blend of both. Book your tickets now!&lt;/p&gt;
+        &lt;/section&gt;
+
+    &lt;/body&gt;
+    &lt;/html&gt;
+</pre>
+    </section>
+
+    <footer>
+        <p></p>
+    </footer>
+
+</body>
+
+</html>
