--- a/TravelWebpage.html
+++ b/TravelWebpage.html
@@ -78,7 +78,7 @@
 <body>
 
     <header>
-        <h1>Travel Webpage Prokect</h1>
+        <h1>Travel Webpage Project</h1>
     </header>
     <nav>
         <a href="https://JonathanBHolden.github.io" target="_blank">Projects</a>
