--- a/KhanAcademy.html
+++ b/KhanAcademy.html
@@ -139,7 +139,7 @@
                 <a href="https://JonathanBHolden.github.io/ColorfulCreature.html">Colorful Creature</a>
                 <a href="https://JonathanBHolden.github.io/SeasonalID.html">Seasonal ID's</a>
                 <a href="https://JonathanBHolden.github.io/ApplesBananas.html">Apples and bananas classes</a>
-                <a href="https://JonathanBHolden.github.io/.html">Project: Travel Webpage</a>
+                <a href="https://JonathanBHolden.github.io/TravelWebpage.html">Project: Travel Webpage</a>
             </div>
         </div>
     </section>
