--- a/TravelWebpage.html
+++ b/TravelWebpage.html
@@ -157,7 +157,7 @@
         &lt;section&gt;
             &lt;img src="exotic_destination.jpg" alt="Exotic Destination"&gt;
             &lt;h2&gt;Discover Paradise&lt;/h2&gt;
-            &lt;p&gt;Escape to a tropical paradise where sun-kissed beaches meet lush green landscapes. Immerse yourself in the vibrant culture and rich history of this exotic destination.&lt;/p&gt;
+            &lt;p&gt;Escape to a tropical paradise where sun-kissed beaches meet lush green landscapes. <br>               Immerse yourself in the vibrant culture and rich history of this exotic destination.&lt;/p&gt;
 
             &lt;h2&gt;Things to See and Do&lt;/h2&gt;
             &lt;ul&gt;
@@ -168,7 +168,7 @@
             &lt;/ul&gt;
 
             &lt;h2&gt;Plan Your Trip&lt;/h2&gt;
-            &lt;p&gt;Plan your dream vacation to this exotic locale. Whether you seek relaxation or adventure, this destination offers a perfect blend of both. Book your tickets now!&lt;/p&gt;
+            &lt;p&gt;Plan your dream vacation to this exotic locale. Whether you seek relaxation or adventure, <br>               this destination offers a perfect blend of both. Book your tickets now!&lt;/p&gt;
         &lt;/section&gt;
 
     &lt;/body&gt;
