--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
             <li><a href="https://JonathanBHolden.github.io/KhanAcademy.html">Projects</a></li>
         </ul>
     </section>
+    
+    <section id="projects">
+        <h2>Machine Learning Crash Course</h2>
+        <ul>
+            <li> </li>
+        </ul>
+        <ul>
+            <li><a href="https://JonathanBHolden.github.io/MachineLearning1.html">Projects</a></li>
+        </ul>
+    </section>
 
     <!-- Put Projects here -->
 
